Add SEO and other UI fixes

--- a/data/config.json
+++ b/data/config.json
@@ -1,4 +1,5 @@
 {
 	"author" : "Sanchit Arora",
-	"email" : "sanaro1999@gmail.com"
+	"email" : "sanaro1999@gmail.com",
+	"description" : "Sanchit Arora portfolio website"
 }
